добавил два метода для перемешения по масиву алфавита, добавил логику в метот encrypt (работает криво, проблема с кодировкой - не правильно читает). Либо переписать на стримы, либо искать решение проблемы с кодировкой.